fix: horizontal scroll

--- a/client/src/container/Tourmate/Tourmate.sass
+++ b/client/src/container/Tourmate/Tourmate.sass
@@ -1,108 +1,99 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap')
 $font:'Merriweather', serif
 $color:rgb(66, 66, 66)
-body
-    margin: 0 auto
-    padding: 0
-    box-sizing: border-box
+
+.tourmate 
+    max-width: 1200px
+    margin: 40px auto
+    display: grid
+    align-items: start
+    grid-template-areas: "profile-card profile profile" "profile-card profile-text profile-text" "profile-card gallery gallery"
     font-family: $font
-    text-decoration: none
-    width: 100%
-.tourmate_inner
-    display: flex
-    padding-top: 30px
-    max-width: 1100px
-    margin: 0 auto
-    .tourmate_card
-        border: 1px solid rgb(189, 189, 189)
-        border-radius: 10px
-        width: 252px
-        padding-top: 20px
-        padding-bottom: 20px
-        box-shadow: rgb(0 0 0 / 20%) 0px 2px 4px
-        &_info
-            display: flex
-            align-items: center
-            justify-content: space-around
-            width: 200px
-            &_image
-                margin-left: 15px
-            &_image img
-                border: 1px solid lightgray
-                width: 60px
-                height: 60px
-                border-radius: 50%
-            &_text
-                margin-left: 10px
-                &_title
-                    font-size: 20px
-                    font-weight: 700
-                    min-height: 24px
-                    margin: 0
-                    color: $color
-                &_p
-                    font-size: 12px
-                    font-weight: 400
-                    min-height: 14px
-                    color: $color
-        &_rating
-            margin-left: 25px
-            &_text
+.tourmate_card
+    border: 1px solid rgb(189, 189, 189)
+    border-radius: 10px
+    width: 253px
+    padding: 20px
+    box-shadow: rgb(0 0 0 / 20%) 0px 2px 4px
+    grid-area: profile-card
+    &_info
+        display: flex
+        align-items: center
+        justify-content: space-around
+        width: 200px
+        &_image
+            margin-left: 15px
+        &_image img
+            border: 1px solid lightgray
+            width: 60px
+            height: 60px
+            border-radius: 50%
+        &_text
+            margin-left: 10px
+            &_title
+                font-size: 20px
+                font-weight: 700
+                min-height: 24px
+                margin: 0
+                color: $color
+            &_p
+                font-size: 12px
+                font-weight: 400
+                min-height: 14px
+                color: $color
+    &_rating
+        margin-left: 25px
+        border-bottom: 1px solid rgb(224, 224, 224)
+        &_text
             color: $color
             font-size: 12px
             font-weight: 400
-        &_line
-            border-bottom: 1px solid rgb(224, 224, 224)
-            background-color: rgb(224, 224, 224)
-            height: 1px
-            color: rgb(224, 224, 224)
-            margin-bottom: 10px
-            margin-left: 20px
-            margin-right: 20px
-        &_items
-            margin-left: 20px
-            &_item
-                display: flex
-                align-items: center
-                margin-bottom: 10px
-                & p
-                    font-size: 12px
-                    font-weight: 400
-                    margin-right: 15px
-                    margin-left: 6px
-                    margin-top: 0
-                    margin-bottom: 0
-                    color: $color
-        &_buttons
-            max-width: 252px
+    &_items
+        margin-left: 20px    
+        margin-top: 10px
+        &_item
             display: flex
-            justify-content: center
-            &_contact
-                background-color: rgb(0, 168, 152)
-                border-radius: 18px
-                border-style: none
-                margin: auto
-                color: white
-                width: 180px
-                height: 36px
-                font-size: 15px
-                font-weight: 700
-                cursor: pointer
-                margin-bottom: 15px
-            &_share
-                display: flex
-                align-items: center
-                border-style: none
-                background: none
-                color: rgb(0, 168, 152)
-                font-size: 14px
-                font-weight: 700
-                cursor: pointer
+            align-items: center
+            margin-bottom: 10px
+            & p
+                font-size: 12px
+                font-weight: 400
+                margin-right: 15px
+                margin-left: 6px
                 margin-top: 0
-                & span
-                    margin-left: 15px
+                margin-bottom: 0
+                color: $color
+    &_buttons
+        max-width: 252px
+        display: flex
+        justify-content: center
+        &_contact
+            background-color: rgb(0, 168, 152)
+            border-radius: 18px
+            border-style: none
+            margin: auto
+            color: white
+            width: 180px
+            height: 36px
+            font-size: 15px
+            font-weight: 700
+            cursor: pointer
+            margin-bottom: 15px
+        &_share
+            display: flex
+            align-items: center
+            border-style: none
+            background: none
+            color: rgb(0, 168, 152)
+            font-size: 14px
+            font-weight: 700
+            cursor: pointer
+            margin-top: 0
+            & span
+                margin-left: 15px
 .tourmate_profile
     margin-left: 50px
+    grid-area: profile
     &_video
         background: black
     &_title h3
@@ -112,28 +103,22 @@ body
         margin: 0
         margin-bottom: 20px
 .tourmate_text
-    max-width: 1200px
-    margin-left: auto
-    &_inner
-        padding-top: 20px
-        width: 720px
-        margin: auto
-        & p
+    margin-top: 40px
+    margin-left: 40px
+    grid-area: profile-text
+    & p
         font-size: 14px
         color: $color
 .tourmate_gallery
-    max-width: 1200px
-    margin: 0 auto
+    grid-area: gallery
+    margin-left: 50px
     &_title
-        max-width: 450px
-        text-align: right 
         & h3
             color: $color
             font-size: 20px
     &_images
-        width: 1370px
-        margin-bottom: 150px
-        text-align: right
+        margin-bottom: 50px
+        margin-left: 40px
         &_top
             & img
                 width: 370px
@@ -145,9 +130,10 @@ body
                 height: 138px
                 padding-left: 4px
     &_link
-        width: 1500px
         margin-top: 10px
         text-align: right
+        border-bottom: 2px solid rgb(224, 224, 224)
+        padding-bottom: 30px
         & a
             font-size: 14px
             cursor: pointer
